--- a/app/template/scripts.htm
+++ b/app/template/scripts.htm
@@ -1,13 +1,15 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.0/backbone.js"></script>
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <check if="{{ @minified }}">
 <true>
-<script src="js/wocdb.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone.min.js"></script>
+<script src="js/wocdb.min.js?{{ @minFileModTime }}"></script>
 </true>
 <false>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone.js"></script>
 <script src="js/wocdb.js"></script>
 <script src="js/models/activewoc.js"></script>
 <script src="js/models/woc.js"></script>
