--- a/app/template/scripts.htm
+++ b/app/template/scripts.htm
@@ -11,6 +11,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone.js"></script>
 <script src="js/wocdb.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/models/activewoc.js"></script>
 <script src="js/models/woc.js"></script>
 <script src="js/models/race.js"></script>
