--- a/app/template/wocdb.htm
+++ b/app/template/wocdb.htm
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id ="wocdb-container">
 </p>
 <section class="row" id="all-wocs-page">
   <div class="col-md-10">
@@ -6,6 +6,16 @@
       <div class="panel-heading">All WOCs and JWOCs</div>
       <div class="panel-body">
         <table id='wocs-table' class='display'></table>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="row" id="person-page">
+  <div class="col-md-10">
+    <div class="panel panel-primary">
+      <div class="panel-heading" id="person-header">Results by Person</div>
+      <div class="panel-body">
+        <table id='person-table' class='display'></table>
       </div>
     </div>
   </div>
