Runners by country

--- a/app/template/nav.htm
+++ b/app/template/nav.htm
@@ -36,7 +36,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown">Runners <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
-              <a href="runners-by-country">Runners by country</a>
+              <a href="runners/person/gbr">Runners by country</a>
             </li>
             <li>
               <a href="name-search">Name search</a>
