--- a/app/template/scripts.htm
+++ b/app/template/scripts.htm
@@ -15,8 +15,10 @@
 <script src="js/models/activewoc.js"></script>
 <script src="js/models/woc.js"></script>
 <script src="js/models/race.js"></script>
+<script src="js/models/runner.js"></script>
 <script src="js/models/result.js"></script>
 <script src="js/collections/wocs.js"></script>
+<script src="js/collections/runners.js"></script>
 <script src="js/collections/races.js"></script>
 <script src="js/collections/person.js"></script>
 <script src="js/collections/raceResult.js"></script>
@@ -25,6 +27,7 @@
 <script src="js/views/master-view.js"></script>
 <script src="js/views/person-view.js"></script>
 <script src="js/views/result-view.js"></script>
+<script src="js/views/runners-view.js"></script>
 <script src="js/views/race-result-view.js"></script>
 <script src="js/views/race-header-view.js"></script>
 <script src="js/views/race-menu-view.js"></script>
@@ -40,7 +43,11 @@ wocdb.config = {
 <check if="{{ isset(@persondata) }}">
   <true>bootstrapPerson: {{ @persondata | raw }},</true>
 </check>
-  bootstrapWocs: {{ @wocs | raw }}
+<check if="{{ isset(@runnerdata) }}">
+  <true>bootstrapRunners: {{ @runnerdata | raw }},</true>
+</check>
+  bootstrapWocs: {{ @wocs | raw }},
+  countries: {{ @countries | raw }}
 }
 }());
 $(document).ready(wocdb.init);
