--- a/app/template/wocdb.htm
+++ b/app/template/wocdb.htm
@@ -10,6 +10,26 @@
     </div>
   </div>
 </section>
+<section class="row" id="country-page">
+  <div class="col-md-10">
+    <div class="panel panel-primary">
+      <div class="panel-heading clearfix">
+        <div class="dropdown  pull-right">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-country" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Country<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-country" id="countries">
+          </ul>
+        </div>
+        <div id="country-header-text">
+          Results by Country
+        </div>
+      </div>
+      <div class="panel-body">
+        <table id='country-table' class='display'></table>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="row" id="person-page">
   <div class="col-md-10">
     <div class="panel panel-primary">
@@ -28,8 +48,8 @@
   </div>
   <div class="row">
     <div id= "woc-summary-nav" class="col-md-3">
-      <ul id="race-nav-list" class="nav nav-pills nav-stacked">
-      </ul>
+      <div id="race-nav-list" class="list-group">
+      </div>
     </div>
     <div class="col-md-7">
       <div class="panel panel-primary">
