Races by country WIP

--- a/app/template/nav.htm
+++ b/app/template/nav.htm
@@ -28,7 +28,7 @@
               <a href="races-by-country">Races by country</a>
             </li>
             <li>
-              <a href="best-by-country">Best result by country</a>
+              <a href="best/all/woc/women/middle">Best result by country</a>
             </li>
           </ul>
         </li>
