--- a/app/template/wocdb.htm
+++ b/app/template/wocdb.htm
@@ -10,14 +10,59 @@
     </div>
   </div>
 </section>
+<section class="row" id="best-page">
+  <div class="col-md-10">
+    <div class="panel panel-default clearfix">
+        <div class="row">
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-type" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Type<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-type" id="types">
+          </ul>
+        </div>
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-class" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Class<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-class" id="classes">
+          </ul>
+        </div>
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-race" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Race<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-race" id="races">
+          </ul>
+        </div>
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-country" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Country<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-country" id="countries">
+          </ul>
+        </div>
+        <div class="col-md-2 pull-right">
+          <button type="button" id="best-submit" class="btn btn-default">Update table</button>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-primary">
+      <div class="panel-heading clearfix">
+        <div id="best-header-text">
+          Best results by Country
+        </div>
+      </div>
+      <div class="panel-body">
+        <table id='best-table' class='display'></table>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="row" id="country-page">
   <div class="col-md-10">
     <div class="panel panel-primary">
       <div class="panel-heading clearfix">
         <div class="dropdown  pull-right">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-country" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Country<span class="caret"></span>
+          <button class="btn btn-default dropdown-toggle" id="dropdown-country" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Country<span class="caret"></span>
           </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdown-country" id="countries">
+          <ul class="dropdown-menu" id="countries">
           </ul>
         </div>
         <div id="country-header-text">
