Races by country

--- a/app/template/nav.htm
+++ b/app/template/nav.htm
@@ -25,9 +25,6 @@
               <a href="">All WOCs/JWOCs</a>
             </li>
             <li>
-              <a href="races-by-country">Races by country</a>
-            </li>
-            <li>
               <a href="best/all/woc/women/middle">Best result by country</a>
             </li>
           </ul>
@@ -39,17 +36,17 @@
               <a href="runners/person/gbr">Runners by country</a>
             </li>
             <li>
-              <a href="name-search">Name search</a>
+              <a href="name-search" class="disabled">Name search</a>
             </li>
           </ul>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Medals <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
-              <a href="medals-by-person">Medals by person</a>
+              <a href="medals-by-person" class="disabled">Medals by person</a>
             </li>
             <li>
-              <a href="medals-by-country">Medals by country</a>
+              <a href="medals-by-country" class="disabled">Medals by country</a>
             </li>
           </ul>
         </li>
