name search added

--- a/app/template/nav.htm
+++ b/app/template/nav.htm
@@ -4,7 +4,6 @@
     Maprunner WOC/JWOC Database
   </div>
 </div>
-<!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -36,24 +35,24 @@
               <a href="runners/person/gbr">Runners by country</a>
             </li>
             <li>
-              <a href="name-search" class="disabled">Name search</a>
+              <a href="person">Name search</a>
             </li>
           </ul>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Medals <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
-              <a href="medals-by-person" class="disabled">Medals by person</a>
+              <a href="medals/person/woc/all/all">Medals by person</a>
             </li>
             <li>
-              <a href="medals-by-country" class="disabled">Medals by country</a>
+              <a href="medals/country/woc/all/all">Medals by country</a>
             </li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="http://www.maprunner.co.uk">Maprunner</a>
+          <a href="http://www.maprunner.co.uk" target="_blank">Maprunner</a>
         </li>
       </ul>
     </div><!--/.nav-collapse -->
