--- a/app/template/footer.htm
+++ b/app/template/footer.htm
@@ -9,8 +9,8 @@
       <p>The Maprunner WOC/JWOC database includes results from all WOCs (except B Finals) and JWOCs (except Qualification races, and excluding second relay teams).
         Select a menu option to try out the various queries available and see what you find.
         The information in the database has come from a number of sources, but most notably the records maintained by Bryan Teahan, Blair Trewin, the IOF,
-        event websites, and various copies of CompassSport, Orienteering World and other things I happen to have around the house.</p>
-      <p>Copyright © 2015 <a href="http://www.maprunner.co.uk">Maprunner</a>.</p>
+        event websites, CompassSport and Orienteering World. Flag icons courtesy of <a href="http://www.IconDrawer.com" target="_blank">IconDrawer</a>.</p>
+      <p>Copyright © 2015 <a href="http://www.maprunner.co.uk" target="_blank">Maprunner</a>.</p>
     </div>
   </div>
 </footer>
