--- a/app/template/wocdb.htm
+++ b/app/template/wocdb.htm
@@ -13,7 +13,7 @@
 <section class="row" id="best-page">
   <div class="col-md-10">
     <div class="panel panel-default clearfix">
-        <div class="row">
+      <div class="row">
         <div class="col-md-2 dropdown">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-type" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Type<span class="caret"></span>
           </button>
@@ -55,6 +55,51 @@
     </div>
   </div>
 </section>
+<section class="row" id="medal-page">
+  <div class="col-md-10">
+    <div class="panel panel-default clearfix">
+      <div class="row">
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-group" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Group by<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-group" id="groups">
+          </ul>
+        </div>
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-type" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Type<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-type" id="types">
+          </ul>
+        </div>
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-class" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Class<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-class" id="classes">
+          </ul>
+        </div>
+        <div class="col-md-2 dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown-race" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Race<span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdown-race" id="races">
+          </ul>
+        </div>
+        <div class="col-md-2 pull-right">
+          <button type="button" id="medal-submit" class="btn btn-default">Update table</button>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-primary">
+      <div class="panel-heading clearfix">
+        <div id="medal-header-text">
+          Medals by Country
+        </div>
+      </div>
+      <div class="panel-body">
+        <table id='medal-table' class='display'></table>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="row" id="country-page">
   <div class="col-md-10">
     <div class="panel panel-primary">
@@ -77,6 +122,16 @@
 </section>
 <section class="row" id="person-page">
   <div class="col-md-10">
+    <div class="panel panel-default clearfix">
+      <div class="row">
+        <div id="suggest-name" class="col-md-5">
+          <input class="typeahead" type="text" placeholder="Name search">
+        </div>
+        <div class="col-md-2 pull-right">
+          <button type="button" id="name-submit" class="btn btn-default">Get results</button>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-primary">
       <div class="panel-heading" id="person-header">Results by Person</div>
       <div class="panel-body">
