--- a/app/template/header.htm
+++ b/app/template/header.htm
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/wocdb.css">
+  <link rel="stylesheet" href="css/wocdb.css?{{ @cssFileModTime }}">
 </head>
 <body>
   <!--[if lt IE 7]>
