Minor display improvements

--- a/app/template/templates.htm
+++ b/app/template/templates.htm
@@ -43,5 +43,6 @@
 Results for <%= name %>
 </script>
 <script type="text/template" id="race-result-tmpl">
-<td><%= position %></td><td><%= name %><td><%= country %></td><td><img src="<%= flag %>"></td><td><%= time %><td><%= percentdown %></td>
+<td class='center-text'><%= parseInt(position,10)===999?"-":position %></td><td><%= name %><td><%= country %></td><td><img src="<%= flag %>"></td>
+<td class='center-text'><%= time %><td class='center-text'><%= percentdown %></td>
 </script>
