--- a/css/wocdb.css
+++ b/css/wocdb.css
@@ -16,8 +16,12 @@ body {
   user-select: none;
 }
 
-#suggest-name .tt-dropdown-menu {
-  max-height: 150px;
+.center-text {
+  text-align: center;
+}
+
+.dropdown-menu {
+  max-height: 250px;
   overflow-y: auto;
 }
 
@@ -86,9 +90,9 @@ body {
 .tt-query,
 .tt-hint {
   width: 396px;
-  height: 30px;
-  padding: 8px 12px;
-  font-size: 24px;
+  height: 34px;
+  padding: 0 12px;
+  font-size: 16px;
   line-height: 30px;
   border: 2px solid #ccc;
   -webkit-border-radius: 8px;
@@ -130,9 +134,14 @@ body {
           box-shadow: 0 5px 10px rgba(0,0,0,.2);
 }
 
+.tt-dropdown-menu {
+  max-height: 250px;
+  overflow-y: auto;
+}
+
 .tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
+  padding: 0 20px;
+  font-size: 16px;
   line-height: 24px;
 }
 
