Medallists by country

--- a/app/template/nav.htm
+++ b/app/template/nav.htm
@@ -47,6 +47,9 @@
             <li>
               <a href="medals/country/woc/all/all">Medals by country</a>
             </li>
+            <li>
+              <a href="medals/gbr/woc/all/all">Medallists by country</a>
+            </li>
           </ul>
         </li>
       </ul>
