--- a/app/template/scripts.htm
+++ b/app/template/scripts.htm
@@ -5,13 +5,13 @@
 <true>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
-<script src="js/typeahead.bundle.min.js">"</script>
+<script src="js/typeahead.bundle.min.js"></script>
 <script src="js/wocdb.min.js?{{ @minFileModTime }}"></script>
 </true>
 <false>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone.js"></script>
-<script src="js/typeahead.bundle.min.js">"</script>
+<script src="js/typeahead.bundle.min.js"></script>
 <script src="js/wocdb.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/models/activewoc.js"></script>
