--- a/app/template/footer.htm
+++ b/app/template/footer.htm
@@ -1,18 +1,21 @@
 <div class="footer">
-<footer class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <img class="footer-photo" alt="WOC winners" src="img/wocwinners.jpg">
+  <footer class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="footer-photo" alt="WOC winners" src="img/wocwinners.jpg">
+      </div>
+      <div class="col-md-8">
+        <h3>About</h3>
+        <p>The Maprunner WOC/JWOC database includes results from all WOCs (except B Finals) and JWOCs (except
+          Qualification races, and excluding second relay teams).
+          Select a menu option to try out the various queries available and see what you find.
+          The information in the database has come from a number of sources, but most notably the records maintained by
+          Bryan Teahan, Blair Trewin, the IOF,
+          event websites, CompassSport and Orienteering World. Flag icons courtesy of <a
+            href="http://www.IconDrawer.com" target="_blank">IconDrawer</a>.</p>
+        <p>Copyright © 2019 <a href="https://www.maprunner.co.uk" target="_blank">Maprunner</a>.</p>
+      </div>
     </div>
-    <div class="col-md-8">
-      <h3>About</h3>
-      <p>The Maprunner WOC/JWOC database includes results from all WOCs (except B Finals) and JWOCs (except Qualification races, and excluding second relay teams).
-        Select a menu option to try out the various queries available and see what you find.
-        The information in the database has come from a number of sources, but most notably the records maintained by Bryan Teahan, Blair Trewin, the IOF,
-        event websites, CompassSport and Orienteering World. Flag icons courtesy of <a href="http://www.IconDrawer.com" target="_blank">IconDrawer</a>.</p>
-      <p>Copyright © 2017 <a href="https://www.maprunner.co.uk" target="_blank">Maprunner</a>.</p>
-    </div>
-  </div>
-</footer>
+  </footer>
 </div>
 </section>
