--- a/app/template/nav.htm
+++ b/app/template/nav.htm
@@ -1,63 +1,64 @@
 <section id="wocdb">
-<div class="container">
-  <div class="wocdb-photo">
-    Maprunner WOC/JWOC Database
-  </div>
-</div>
-<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-    <div class="navbar-header">
+    <div class="wocdb-photo">
+      Maprunner WOC/JWOC Database
+    </div>
+  </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-      <a class="navbar-brand" href="">Home</a>
+        <a class="navbar-brand" href="">Home</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">Races <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="">All WOCs/JWOCs</a>
+              </li>
+              <li>
+                <a href="best/all/woc/women/middle">Best result by country</a>
+              </li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">Runners <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="runners/person/gbr">Runners by country</a>
+              </li>
+              <li>
+                <a href="person">Name search</a>
+              </li>
+            </ul>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">Medals <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="medals/person/woc/all/all">Medals by person</a>
+              </li>
+              <li>
+                <a href="medals/country/woc/all/all">Medals by country</a>
+              </li>
+              <li>
+                <a href="medals/gbr/woc/all/all">Medallists by country</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="https://www.maprunner.co.uk" target="_blank">Maprunner</a>
+          </li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">Races <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="">All WOCs/JWOCs</a>
-            </li>
-            <li>
-              <a href="best/all/woc/women/middle">Best result by country</a>
-            </li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">Runners <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="runners/person/gbr">Runners by country</a>
-            </li>
-            <li>
-              <a href="person">Name search</a>
-            </li>
-          </ul>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">Medals <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="medals/person/woc/all/all">Medals by person</a>
-            </li>
-            <li>
-              <a href="medals/country/woc/all/all">Medals by country</a>
-            </li>
-            <li>
-              <a href="medals/gbr/woc/all/all">Medallists by country</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="http://www.maprunner.co.uk" target="_blank">Maprunner</a>
-        </li>
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</nav>
+  </nav>
