--- a/app/template/scripts.htm
+++ b/app/template/scripts.htm
@@ -1,5 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <check if="{{ @minified }}">
 <true>
